@@ -4,14 +4,12 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import spending.tracker.backend.entity.Spending;
+import spending.tracker.backend.exception.ResourceNotFoundException;
 import spending.tracker.backend.mapper.SpendingMapper;
 import spending.tracker.backend.model.SpendingModel;
-import spending.tracker.backend.exception.ResourceNotFoundException;
 import spending.tracker.backend.repository.SpendingRepository;
-import spending.tracker.backend.repository.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,12 +18,11 @@ public class SpendingDataService {
 
     private final SpendingRepository spendingRepository;
     private final SpendingMapper spendingMapper;
-    private final UserRepository userRepository;
 
-    public List<SpendingModel> findAllByUserId(String userId) {
-        return spendingRepository.findByUserEmail(userId).stream()
+    public List<SpendingModel> findAllByUserEmail(String userEmail) {
+        return spendingRepository.findByUserEmail(userEmail).stream()
                 .map(spendingMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public SpendingModel findById(Long id) {
@@ -36,13 +33,6 @@ public class SpendingDataService {
 
     public SpendingModel save(SpendingModel spendingModel) {
         Spending spending = spendingMapper.toEntity(spendingModel);
-        if (spendingModel.getUserEmail() != null) {
-            var user = userRepository.findByEmail(spendingModel.getUserEmail());
-            if (user == null) {
-                throw new ResourceNotFoundException("User", "email", spendingModel.getUserEmail());
-            }
-            spending.setUser(user);
-        }
         Spending savedSpending = spendingRepository.save(spending);
         return spendingMapper.toModel(savedSpending);
     }
